--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,11 @@ build/Release
 
 .lock-wscript
 
+# Wtf OS X
 .DS_Store
+
+# Folder for local mongodb
 db
+
+# Intellij IDE stuff (thx webstorm)
+.idea
